--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -92,5 +92,6 @@
   "registered_info": "You are a registered user.",
   "activist_info": "You are an activist. Thank you for your contributions!",
   "admin_info": "You are an administrator.",
-  "change_municipality": "Change Municipality"
+  "change_municipality": "Change Municipality",
+  "success_registration_pending_confirmation": "Registration is almost complete. Please check your email and confirm your account before login."
 }
