--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -92,5 +92,6 @@
   "registered_info": "Вы зарегистрированный пользователь.",
   "activist_info": "Вы активист. Спасибо за ваш вклад!",
   "admin_info": "Вы администратор.",
-  "change_municipality": "Сменить муниципалитет"
+  "change_municipality": "Сменить муниципалитет",
+  "success_registration_pending_confirmation": "Регистрация почти завершена. Проверьте email и подтвердите аккаунт перед входом."
 }
